<resources>
    <string name="app_name">CalculadoraDMO</string>
    <string name="button_c_text">C</string>
    <string name="button_seven_text">7</string>
    <string name="button_four_text">4</string>
    <string name="button_one_text">1</string>
    <string name="button_zero_text">0</string>
    <string name="button_eight_text">8</string>
    <string name="button_five_text">5</string>
    <string name="button_two_text">2</string>
    <string name="button_point_text">.</string>
    <string name="button_nine_text">9</string>
    <string name="button_six_text">6</string>
    <string name="button_three_text">3</string>
    <string name="button_equals_text">=</string>
    <string name="button_div_text">/</string>
    <string name="button_mult_text">X</string>
    <string name="button_sub_text">-</string>
    <string name="button_adi_text">+</string>
    <string name="text_resultado">0.0</string>
    <string name="button_text_ce">CE</string>
    <string name="button_text_potencia">^</string>
</resources>
