<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activity.MainActivity">



    <TextView
        android:id="@+id/text_resultado"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/text_resultado"
        android:textAlignment="textEnd"
        android:layout_alignParentEnd="true"/>


    <Button
        android:id="@+id/button_c"
        android:layout_marginTop="60dp"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="#F44336"
        android:text="@string/button_c_text" />


    <Button
        android:id="@+id/button_ce"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@id/button_c"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textColor="#F44336"
        android:text="@string/button_text_ce" />

    <Button
        android:id="@+id/button_potencia"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@id/button_ce"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:text="@string/button_text_potencia" />





    <Button
        android:id="@+id/button_number_seven"
        android:layout_below="@id/button_c"
        android:layout_marginTop="10dp"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:text="@string/button_seven_text" />

    <Button
        android:id="@+id/button_number_four"
        android:layout_below="@id/button_number_seven"
        android:layout_marginTop="10dp"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:text="@string/button_four_text" />

    <Button
        android:id="@+id/button_number_one"
        android:layout_below="@id/button_number_four"
        android:layout_marginTop="10dp"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:text="@string/button_one_text" />

    <Button
        android:id="@+id/button_number_zero"
        android:layout_below="@id/button_number_one"
        android:layout_marginTop="10dp"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:text="@string/button_zero_text" />

    <Button
    android:id="@+id/button_number_eight"
    android:layout_marginTop="150dp"
    android:layout_marginStart="10dp"
    android:layout_toRightOf="@id/button_number_seven"
    android:layout_width="90dp"
    android:layout_height="80dp"
    android:textSize="40dp"
    android:textColor="@android:color/black"
    android:text="@string/button_eight_text" />

    <Button
        android:id="@+id/button_number_five"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/button_number_four"
        android:layout_below="@id/button_number_eight"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:text="@string/button_five_text" />


    <Button
        android:id="@+id/button_number_two"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/button_number_one"
        android:layout_below="@id/button_number_five"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:text="@string/button_two_text" />


    <Button
        android:id="@+id/button_point"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/button_number_zero"
        android:layout_below="@id/button_number_two"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:text="@string/button_point_text" />

    <Button
        android:id="@+id/button_number_nine"
        android:layout_marginTop="150dp"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@id/button_number_eight"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:text="@string/button_nine_text" />

    <Button
        android:id="@+id/button_number_six"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@id/button_number_nine"
        android:layout_toRightOf="@id/button_number_five"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:text="@string/button_six_text" />


    <Button
        android:id="@+id/button_number_three"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@id/button_number_six"
        android:layout_toRightOf="@id/button_number_two"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:text="@string/button_three_text" />


    <Button
        android:id="@+id/button_equals"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_below="@id/button_number_three"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/button_point"
        android:text="@string/button_equals_text"
        android:textColor="@android:color/black"
        android:textSize="40dp" />

    <Button
        android:id="@+id/button_div"
        android:layout_marginTop="60dp"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/button_div_text" />

    <Button
    android:id="@+id/button_mult"
    android:layout_marginTop="150dp"
    android:layout_marginStart="10dp"
    android:layout_toRightOf="@id/button_number_nine"
    android:layout_width="90dp"
    android:layout_height="80dp"
    android:textSize="40dp"
    android:textColor="@android:color/black"
    android:text="@string/button_mult_text" />

    <Button
        android:id="@+id/button_sub"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@id/button_number_six"
        android:layout_below="@id/button_mult"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:text="@string/button_sub_text" />

    <Button
        android:id="@+id/button_adi"
        android:layout_marginTop="10dp"
        android:layout_below="@id/button_sub"
        android:layout_toRightOf="@id/button_number_three"
        android:layout_marginStart="10dp"
        android:layout_width="90dp"
        android:layout_height="172dp"
        android:textSize="40dp"
        android:textColor="@android:color/black"
        android:text="@string/button_adi_text" />








</RelativeLayout>